--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -763,8 +763,7 @@ transform: scale(1.1);
 }
 .leftSide1, .rightSide1{
   box-sizing: border-box;
-  width: 50%;
-  height: 40vh;
+  height: 30vh;
 } 
 .rightSide1{
   width: 100%;
@@ -784,7 +783,6 @@ transform: scale(1.1);
 .leftSide1{
   width: 100%;
   box-sizing: border-box;
- height: 40vh;
   overflow: hidden;
 }
 .leftSide1 img{
@@ -794,7 +792,7 @@ transform: scale(1.1);
 
 
 .rightSide1 h1{
-  font-size: 30px;
+  font-size: 40px;
   color: white;
   padding: 15px;
   padding-top: 5px;
@@ -803,7 +801,7 @@ transform: scale(1.1);
   animation: heartbeat 8.5s ease-in-out infinite both;
 }
 .rightSide1 h3{
-  font-size: 18px;
+  font-size: 22px;
   color: white;
   padding: 15px;
   margin-top: -35px;
@@ -812,23 +810,31 @@ transform: scale(1.1);
   flex-direction: column;
 }
 
-@media  screen and (min-width: 950px) {
+@media  screen and (min-width: 1050px){
+  .rightSide1 h3{
+    font-size: 35px;
+    margin-top: -55px;
+   }
+   .rightSide1 h1{
+     font-size: 60px;
+   }
+}
+@media  screen and (min-width: 980px){
   .rightSide1, .leftSide1{
     width: 50%;
-    height: 350px;
+    height: 40vh;
+  }
+}
+@media  screen and (min-width: 750px) {
+  .rightSide1, .leftSide1{
+    width: 50%;
+   
   }
   .twoSides, .twoSideTwo{
     flex-direction: row-reverse;
   }
  .leftSide5{
   background-position: right;
- }
- .rightSide1 h3{
-  font-size: 35px;
-  margin-top: -55px;
- }
- .rightSide1 h1{
-   font-size: 60px;
  }
 }
 
