--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -244,9 +244,12 @@ color: #9500ff;
     font-size: 25px;
     text-decoration: none;
     transition: all .2s ease-in-out;
+    text-align: center;
+    
+   
   }
   #partTwo a:hover{
-    opacity: 0.5;
+    opacity: 0.9;
     transform: scale(1.1); 
   }
   #partTwo img{
@@ -386,7 +389,6 @@ color: #9500ff;
   }
   .people {
     z-index: 0;
-    
   }
 
  
@@ -724,7 +726,7 @@ transform: scale(1.1);
   overflow-y: hidden;
 }
 .parallaX{
-  background-image: url("../Assets/mainBackground.png");
+  background-image: url("../Assets/main1.jpg");
 }
 .animatesss{
   background-image: url("../Assets/projectsBanner.png");
